feat(api): OpenAPI implementation
